kube/dev/vault-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - secrets.localdev
      secretName: secrets-tls
  rules:
    - host: secrets.localdev
      http:
        paths:
          - path: /
            backend:
              serviceName: vault
              servicePort: 8200
